made subtitle bold

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,7 @@
                     <img src="/img/team/libby.png" />
                 </div>
                 <div class="col-md-9">
-                    <h3 class="section-subheading text-muted">Libby Upson</h3>  
+                    <h2 class="section-subheading text-muted"><strong>Libby Upson</strong></h2>  
                     <p class="text-muted">With innovative design solutions and an ability to interpret her clients business requirements, Libby works at the place where users and buildings meet, seeking ways in which the design and use of space can support academic and/or organisational change. <br/><br/>
                         Libby is an ambitious and motivated Interior designer with over 14 years experience in both the education and commercial office fit out sectors. Libby prides herself on being proficient at interpreting the brief. With a comprehensive knowledge of the design and furniture industry, Libby is able to develop and detail innovative design concepts that are cost effective and realistic. <br/><br/>
                     </p>
