big change to experience section

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -17,5 +17,77 @@
                     </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-subheading text-muted"><strong>Professional Experience Prior to Forming EMU Interior Design </strong>></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/team/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2009-2011</h4>
+                                    <h4 class="subheading">FF&E consultancy in London</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-left text-muted">
+                                        <li>Client engagement </li>
+                                        <li>Design coordination with project Architects</li>
+                                        <li>In depth furniture knowledge and proposals</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/team/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2011</h4>
+                                    <h4 class="subheading">Commercial office fit out sector</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-left text-muted">
+                                        <li>Keen eye for innovative design solutions and effective space planning</li>
+                                        <li>Experience with both D&B and consultancy contracts. </li>
+                                        <li>Detailed technical drawings and furniture schedules</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/team/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>December 2012</h4>
+                                    <h4 class="subheading">Client side Project Design Manager with creative control over the estate</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-left text-muted">
+                                        <li>Develop design standards across campus</li>
+                                        <li>Compiling Tender and construction Documentation</li>
+                                        <li>Project management, programming, contract administration and budgeting</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>                        
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
