--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -339,7 +339,8 @@ section h2.section-heading {
     font-size: 40px;
 }
 
-section h3.section-subheading {
+section h3.section-subheading, 
+section h2.section-subheading {
     margin-bottom: 50px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
