--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -337,10 +337,10 @@ section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
     font-size: 40px;
+    text-transform: none;
 }
 
-section h3.section-subheading, 
-section h2.section-subheading {
+section h3.section-subheading {
     margin-bottom: 50px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
