another correction for subheader

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -337,7 +337,6 @@ section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
     font-size: 40px;
-    text-transform: none;
 }
 
 section h3.section-subheading {
@@ -349,6 +348,9 @@ section h3.section-subheading {
     font-weight: 400;
 }
 
+section h2.section-subheading {
+    text-transform: none;
+}
 /* @media(min-width:768px) {
     section {
         padding: 150px 0;
