--- a/_includes/team.html
+++ b/_includes/team.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="section-subheading text-muted"><strong>Professional Experience Prior to Forming EMU Interior Design </strong>></h2>
+                    <h3 class="section-subheading text-muted"><strong>Professional Experience Prior to Forming EMU Interior Design </strong></h3>
                 </div>
             </div>
             <div class="row">
@@ -31,7 +31,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
+                                    <!-- <h4>2009-2011</h4> -->
                                     <h4 class="subheading">FF&E consultancy in London</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -49,7 +49,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
+                                    <!-- <h4>March 2011</h4> -->
                                     <h4 class="subheading">Commercial office fit out sector</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -67,7 +67,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
+                                    <!-- <h4>December 2012</h4> -->
                                     <h4 class="subheading">Client side Project Design Manager with creative control over the estate</h4>
                                 </div>
                                 <div class="timeline-body">
