--- a/_includes/team.html
+++ b/_includes/team.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h3 class="section-subheading text-muted"><strong>Professional Experience Prior to Forming EMU Interior Design </strong></h3>
+                    <h3 class="section-subheading text-center"><strong>Prior Experience</strong></h3>
                 </div>
             </div>
             <div class="row">
