removed sections from experience

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -17,11 +17,11 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
-                    <h3 class="section-subheading text-center"><strong>Prior Experience</strong></h3>
+                    <h2 class="section-subheading text-center"><strong>Prior Experience</strong></h2>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
@@ -32,7 +32,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <!-- <h4>2009-2011</h4> -->
-                                    <h4 class="subheading">FF&E consultancy in London</h4>
+                                    <h4 class="subheading">FF&E Consultancy</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-left text-muted">
@@ -50,7 +50,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <!-- <h4>March 2011</h4> -->
-                                    <h4 class="subheading">Commercial office fit out sector</h4>
+                                    <h4 class="subheading">Commercial office fit out</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-left text-muted">
@@ -68,7 +68,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <!-- <h4>December 2012</h4> -->
-                                    <h4 class="subheading">Client side Project Design Manager with creative control over the estate</h4>
+                                    <h4 class="subheading">Project Design Manager</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-left text-muted">
@@ -79,13 +79,13 @@
                                 </div>
                             </div>
                         </li>                        
-                        <li class="timeline-inverted">
+                        <!-- <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
                                     <br>Story!</h4>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
