--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-    <section id="services" class="bg-light-gray section-linked-top">
+    <section id="services" class="section-linked-top">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -21,7 +21,7 @@
             </div>
         </div>
     </aside>
-    <section id="sub-services" class="bg-light-gray section-linked-bottom">
+    <section id="sub-services" class="section-linked-bottom">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6">
