added second parallax refrtain

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -84,3 +84,9 @@
             </div>            
         </div>
     </section>
+
+    <section id="refrain2" class="parallax">
+        <div class="container">
+            <div class="row"></div>
+        </div>
+    </section>
