--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -672,6 +672,14 @@ section#refrain {
   height: 100%;
 }
 
+section#refrain2 {
+    background-color: #222;
+    background-image: url('{{ site.baseurl }}/img/DCK-house.jpg');
+
+  /* Full height */
+  height: 100%;
+}
+
 section#contact {
     background-color: #222;
     background-image: url('{{ site.baseurl }}/img/map-image.png');
