--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,7 +15,7 @@
     <aside>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 section-linked-middle">
+                <div class="col-lg-12">
                     <img src="img/services/main.png" class="img-responsive img-centered" alt="">
                 </div>
             </div>
