refrain 2 image change

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -674,7 +674,7 @@ section#refrain {
 
 section#refrain2 {
     background-color: #222;
-    background-image: url('{{ site.baseurl }}/img/DCK-house.jpg');
+    background-image: url('{{ site.baseurl }}/img/Cardpay-1.jpg');
 
   /* Full height */
   height: 100%;
